2023-05-17  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/pkl-gen.pks (struct_constructor): Make sure the
	destination type of a cast to an array has a bounder.
	* libpoke/pkl-gen.c (pkl_gen_pr_type_array): Make sure the array
	type has a bounder in PKL_GEN_CTX_IN_TYPE context.
	* testsuite/poke.pkl/scons-72.pk: New test.
	* testsuite/Makefile.am (EXTRA_DIST): Add new test.

2023-05-13  Jose E. Marchesi  <jemarch@gnu.org>

	* NEWS: Add entries for 3.2.
	* doc/gendocs_template (For version 3.2): Update version to 3.2.

2023-05-03  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/pkl-gen.c (pkl_gen_pr_ass_stmt): Fix check for non-null
	field name.
	* testsuite/poke.pkl/ass-18.pk: New test.
	* testsuite/Makefile.am (EXTRA_DIST): Add new test.

2023-04-28  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/libpoke.c (pk_load): Fix returned value.
	* poke/pk-cmd.c (pk_cmd_init): Fix call to pk_load.
	* poke/poke.c (initialize): Likewise.

2023-04-17  Jose E. Marchesi  <jemarch@gnu.org>

	* NEWS: Add entries for 3.1.
	* doc/gendocs_template (For version 3.1): Bump version to 3.1.
	* libpoke/Makefile.am (pvm-vm.h): Remove dependency on $(JITTER).

2023-03-05  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/pkl-gen.c (pkl_gen_pr_cast): Fix memory leak.

2023-03-04  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/pkl-gen.c (pkl_gen_ps_type_any): Construct a value 0 for
	values of type `any'.
	* testsuite/poke.pkl/scons-71.pk: New test.
	* testsuite/Makefile.am (EXTRA_DIST): Add new test.

2023-03-04  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/pkl-fold.c (OP_BINARY_OIO): Support units 0.
	* testsuite/poke.pkl/mul-offsets-11.pk: New test.
	* testsuite/Makefile.am (EXTRA_DIST): Add new test.

2023-02-27  Frederic Cambus <fred@statdns.com>

	* INSTALL: Remove section about building the GUI.

2023-02-20  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/pvm.jitter: Use pvm_strcat instead of strcat.

2023-02-19  Bruno Haible  <bruno@clisp.org>
